force-app/main/default/objects/Compliance_Gap__c/Compliance_Gap__c.object-meta.xml
<CustomObject>
    <label>Compliance Gap</label>
    <pluralLabel>Compliance Gaps</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Gap Number</label>
        <displayFormat>GAP-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Tracks compliance gaps and remediation requirements</description>
    <fields>
        <fullName>Framework__c</fullName>
        <label>Framework</label>
        <type>Picklist</type>
        <required>true</required>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SOX</fullName>
                </value>
                <value>
                    <fullName>SOC2</fullName>
                    <label>SOC 2</label>
                </value>
                <value>
                    <fullName>HIPAA</fullName>
                </value>
                <value>
                    <fullName>GDPR</fullName>
                </value>
                <value>
                    <fullName>CCPA</fullName>
                </value>
                <value>
                    <fullName>GLBA</fullName>
                </value>
                <value>
                    <fullName>NIST</fullName>
                    <label>NIST 800-53</label>
                </value>
                <value>
                    <fullName>ISO27001</fullName>
                    <label>ISO 27001</label>
                </value>
                <value>
                    <fullName>PCI_DSS</fullName>
                    <label>PCI-DSS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Policy_Reference__c</fullName>
        <label>Policy Reference</label>
        <type>Text</type>
        <length>255</length>
        <required>true</required>
        <description>Reference to Compliance_Policy__mdt DeveloperName</description>
    </fields>
    <fields>
        <fullName>Gap_Description__c</fullName>
        <label>Gap Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <required>true</required>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRITICAL</fullName>
                    <label>Critical</label>
                </value>
                <value>
                    <fullName>HIGH</fullName>
                    <label>High</label>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>LOW</fullName>
                    <label>Low</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <required>true</required>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPEN</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>IN_PROGRESS</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>REMEDIATED</fullName>
                    <label>Remediated</label>
                </value>
                <value>
                    <fullName>VERIFIED</fullName>
                    <label>Verified</label>
                </value>
                <value>
                    <fullName>ACCEPTED_RISK</fullName>
                    <label>Accepted Risk</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remediation_Plan__c</fullName>
        <label>Remediation Plan</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Remediation_Owner__c</fullName>
        <label>Remediation Owner</label>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Gap Remediations</relationshipLabel>
        <relationshipName>Gap_Remediations</relationshipName>
    </fields>
    <fields>
        <fullName>Target_Remediation_Date__c</fullName>
        <label>Target Remediation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Remediation_Date__c</fullName>
        <label>Actual Remediation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Risk_Score__c</fullName>
        <label>Risk Score</label>
        <type>Number</type>
        <precision>5</precision>
        <scale>2</scale>
        <description>Calculated risk score (0-10) for this gap</description>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <type>Text</type>
        <length>100</length>
        <description>Type of entity with the gap (e.g., PERMISSION_SET, FLOW, CUSTOM_OBJECT)</description>
    </fields>
    <fields>
        <fullName>Entity_Id__c</fullName>
        <label>Entity ID</label>
        <type>Text</type>
        <length>18</length>
        <description>Salesforce ID of the entity with the gap</description>
    </fields>
    <fields>
        <fullName>Detected_Date__c</fullName>
        <label>Detected Date</label>
        <type>DateTime</type>
        <required>true</required>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Jira_Issue_Key__c</fullName>
        <label>Jira Issue Key</label>
        <type>Text</type>
        <length>50</length>
        <externalId>true</externalId>
        <description>Linked Jira issue key (e.g., COMPLIANCE-123)</description>
    </fields>
    <fields>
        <fullName>Jira_Issue_URL__c</fullName>
        <label>Jira Issue URL</label>
        <type>Url</type>
        <description>Direct link to the Jira issue</description>
    </fields>
    <fields>
        <fullName>Jira_Status__c</fullName>
        <label>Jira Status</label>
        <type>Text</type>
        <length>50</length>
        <description>Current status of the linked Jira issue</description>
    </fields>
    <fields>
        <fullName>Jira_Last_Sync__c</fullName>
        <label>Jira Last Sync</label>
        <type>DateTime</type>
        <description>Last time the Jira issue was synced</description>
    </fields>
</CustomObject>