force-app/main/default/objects/Compliance_Gap__c/fields/Gap_Type__c.field-meta.xml
<CustomField>
    <fullName>Gap_Type__c</fullName>
    <description>Type or category of the compliance gap</description>
    <label>Gap Type</label>
    <type>Text</type>
    <length>100</length>
</CustomField>