force-app/main/default/objects/Compliance_Gap__c/fields/Lifecycle_Stage__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Stage__c</fullName>
    <label>Lifecycle Stage</label>
    <type>Picklist</type>
    <description>Current stage in the compliance remediation lifecycle</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISCOVERY</fullName>
                <default>true</default>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>ASSESSMENT</fullName>
                <label>Assessment</label>
            </value>
            <value>
                <fullName>REMEDIATION</fullName>
                <label>Remediation</label>
            </value>
            <value>
                <fullName>VALIDATION</fullName>
                <label>Validation</label>
            </value>
            <value>
                <fullName>MONITORING</fullName>
                <label>Monitoring</label>
            </value>
            <value>
                <fullName>CLOSED</fullName>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>