force-app/main/default/objects/Compliance_Gap__c/fields/SLA_Deadline__c.field-meta.xml
<CustomField>
    <fullName>SLA_Deadline__c</fullName>
    <label>SLA Deadline</label>
    <type>DateTime</type>
    <description>Deadline by which this gap must be remediated per SLA. Calculated based on severity: Critical=7 days, High=14 days, Medium=30 days, Low=90 days from detection.</description>
</CustomField>